--- a/login.css
+++ b/login.css
@@ -18,7 +18,7 @@ body {
 #main-page {
     background: url('image-background.jpg') no-repeat center center fixed;
     background-size: cover;
-    height: 100vh;
+    height: 120vh;
 }
 
 .loginrow {
@@ -297,6 +297,8 @@ input[type="text" i] {
     }
 
     main#main-page {
-        height: calc(100vh - 86px);
+        background: url(image-background.jpg) no-repeat center center fixed;
+        background-size: cover;
+        height: 100vh;
     }
 }
